# ultima

./: CMakeLists.txt  UltimaConfig.h.in
client/: CMakeLists.txt  client.cpp
client/include/: ClientConnection.h  GameClient.h
client/src/: ClientConnection.cpp  GameClient.cpp
core/: CMakeLists.txt
core/include/: Singleton.h  Singleton.inl
graphics/: CMakeLists.txt
graphics/src/: Window.cpp
input/: CMakeLists.txt
input/include/: Manager.h
input/src/: Manager.cpp
network/: CMakeLists.txt
network/include/: Client.h  Client.inl  Connection.h  Connection.inl  Message.h  Server.h  Server.inl
proto/: CMakeLists.txt  Message.proto
proto/include/: Message.h  ProtoConnection.h
server/: CMakeLists.txt  server.cpp
server/include/: GameServer.h  ServerConnection.h
server/src/: GameServer.cpp  ServerConnection.cpp
