CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(Ultima)

SET(CMAKE_CXX_FLAGS -std=c++0x)

SET(Ultima_VERSION_MAJOR 1)
SET(Ultima_VERSION_MINOR 0)

CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/UltimaConfig.h.in"
    "${PROJECT_BINARY_DIR}/UltimaConfig.h"
)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(graphics)
ADD_SUBDIRECTORY(input)

ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(server)