INCLUDE(FindThreads)
FIND_PACKAGE(Boost 1.54 COMPONENTS system thread REQUIRED)

INCLUDE_DIRECTORIES(include)
ADD_LIBRARY(network INTERFACE)
TARGET_INCLUDE_DIRECTORIES(network INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(network INTERFACE core ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES})