INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)

FILE(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${SOURCES})

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
TARGET_INCLUDE_DIRECTORIES(proto PUBLIC ${CMAKE_BINARY_DIR}/proto)
TARGET_LINK_LIBRARIES(proto ${PROTOBUF_LIBRARY})